[package]
name = "ccip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-chains = "0.1.10"
alloy-primitives = "0.6.2"
alloy-sol-types = { version = "0.6.2", features = ["json"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
